--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
   height: 100vh;
   background-color: black;
   display: flex;
-  flex-direction: column;
+  gap: 100px;
   justify-content: center;
   align-items: center;
 }
@@ -16,8 +16,14 @@ body {
   width: 300px;
   position: absolute;
   top: 300px;
-  left: 900px;
+  left: 800px;
 }
 #crescent {
   width: 600px;
+}
+h1 {
+  color: #ffd700;
+  font-size: 80px;
+  font-family: monospace;
+  text-shadow: 2px 2px 20px white;
 }
