--- a/index.css
+++ b/index.css
@@ -12,13 +12,13 @@ body {
   justify-content: center;
   align-items: center;
 }
-#mosque {
+.mosque {
   width: 300px;
   position: absolute;
   top: 300px;
   left: 800px;
 }
-#crescent {
+.crescent {
   width: 600px;
 }
 h1 {
