--- a/index.css
+++ b/index.css
@@ -29,10 +29,28 @@ body {
   width: 60%;
 }
 h1 {
-  position: ab;
   color: #ffd700;
   font-size: 80px;
   font-family: monospace;
   text-shadow: 2px 2px 20px rgb(222, 130, 18);
   z-index: 1;
+}
+@media screen and (max-width: 1000px) {
+  .mosque {
+    width: 300px;
+  }
+  .crescent {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 576px) {
+  .mosque {
+    width: 160px;
+  }
+  .crescent {
+    width: 280px;
+  }
+  h1 {
+    font-size: 50px;
+  }
 }
